Revision history for FCGI-Buffer

0.09
	Begin code to replace dynamic links to static links on subsequent calls
		(Highly experimental, and unconfigurable)
	Honour the order of HTTP_ACCEPT_ENCODING
	Improved handling of HTTP status
	init() returns the object itself so you can now chain messages
	Put different languages in different caches

0.08	Tue Oct  4 10:06:22 EDT 2016
	Print stack trace when calling init too late
	Support Brotli

0.07	Sat Dec  5 15:03:56 EST 2015
	Fix RT110011
	If you give a cache to init() then later give cache => undef,
		the server side cache is no longer used.

0.06	Mon Oct 12 18:41:13 EDT 2015
	Fix on older perls

0.05	Sun Aug 16 20:19:13 EDT 2015
	generate_key - honour the vary header
	Fix problem were server side cached contents weren't compressed when
		loading the content from the cache

0.04	Fri May 22 12:19:38 EDT 2015
	Added t/nocache.t
	Fix t/cache.t when CHI is not installed

0.03	Sun May 17 08:43:42 EDT 2015
	Added X-Cache and X-Cache-Lookup headers
	Fixed overly agressive optimisation
	Don't use the cache if the client sends max-age=0
	Added cache_age option to init()
	Removed Test::TempDir RT102225
	Added t/cache.t
	Fix '(in cleanup) Can't call method "READ" on an undefined value'
		Perl >= 5.14.0 only
	Improved handling of Wide characters

0.02	Sat Jan 31 11:16:28 EST 2015
	Fix set_options
	Fix handling when content-type isn't set

0.01	Thu Jan 29 15:42:06 EST 2015
	First draft, clone from CGI::Buffer and object orient the code