@@ -1,8 +1,10 @@
 Revision history for FCGI-Buffer
 
 0.09
-	Begin code to replace dynamic links to static links on subsequent calls
+	Seplace dynamic links to static links on subsequent calls
 		(Highly experimental, and unconfigurable)
+	In /cgi-bin/foo.fcgi?arg1=a replace references to
+		/cgi-bin/foo.fcgi?arg2=b to arg2=b
 	Honour the order of HTTP_ACCEPT_ENCODING
 	Improved handling of HTTP status
 	init() returns the object itself so you can now chain messages
